<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#5882DC" >

        <TextView
            android:id="@+id/tv_show_username"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_show_form"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_margin="5dp"
            android:background="@null"
            android:text="@string/query1"
            android:textSize="15sp" />
    </RelativeLayout>

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView_show"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    android:text="@string/no." />

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    android:text="@string/ccdc" />

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    android:text="@string/goods_show_num" />

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    android:text="@string/goods_name" />

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    android:text="@string/goods_xiyuname" />

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    android:text="@string/goods_type" />

                <TextView
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    android:text="@string/goods_unit" />

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    android:text="@string/goods_unitPrice" />

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    android:text="@string/goods_totalMoney" />

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    android:text="@string/goods_kuwei" />
                
                 <TextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    android:text="@string/goods_kufang" />
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    android:text="@string/goods_InventNum" />
                 <TextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    android:text="@string/goods_InventMoney" />
                  <TextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    android:text="@string/goods_Status" />
            </LinearLayout>

            <ListView
                android:id="@+id/lv_show_data"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" >
            </ListView>
        </LinearLayout>
    </HorizontalScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="#5882DC"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_show_Inventory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="@drawable/button_pattern"
            android:scaleType="centerInside"
            android:text="@string/inventory"
            android:textColor="#FFFFFF"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btn_show_Stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="@drawable/button_pattern"
            android:scaleType="centerInside"
            android:text="@string/stop"
            android:textColor="#FFFFFF"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btn_show_Clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="@drawable/button_pattern"
            android:scaleType="centerInside"
            android:text="@string/clear"
            android:textColor="#FFFFFF"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>